--- a/api/database.yaml
+++ b/api/database.yaml
@@ -1,5 +1,5 @@
 username: "postgres"
 password: "f03c2919"
-host: "localhost"
+host: "da2020.cezpgar46hmj.us-east-2.rds.amazonaws.com"
 port: 5432
 databaseName: "dentistry_api"
