--- a/dentistry/pubspec.yaml
+++ b/dentistry/pubspec.yaml
@@ -21,28 +21,15 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  dio: ^3.0.9
-  shared_preferences: ^0.5.7+3
-  get: ^3.2.2
-  json_annotation: ^3.0.1
-  json_serializable: ^3.3.0
-  flushbar: ^1.10.4
-  flutter_mobx: ^1.1.0+1
-  mobx: ^1.2.1+1
-  flutter_modular: ^1.2.7+1
-  date_range_picker: ^1.0.5
-  flutter_svg: ^0.17.4
   flutter:
     sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  cupertino_icons: ^0.1.3
 
 dev_dependencies:
-  mockito: ^4.1.1
-  mobx_codegen: ^1.1.0+1
-  build_runner: ^1.10.0
   flutter_test:
     sdk: flutter
 
@@ -56,26 +43,12 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-  assets:
-    - assets/
-    - assets/w3samples/
-    - assets/deborah_ufw/
-    - assets/simple/
-    - assets/wikimedia/
-    - assets/android_vd/
-
-vars: 
-    clean: flutter clean
-    get: flutter pub get
-    runner: flutter pub run build_runner
-scripts: 
-    mobx_build: $clean & $get & $runner build --delete-conflicting-outputs
-    mobx_watch: $clean & $get & $runner watch --delete-conflicting-outputs
 
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
